alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -564,7 +564,7 @@ h3 {
 .clients {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: center;
 	align-content: center;
 	align-items: center;
 	margin: 60px 0;
